force-app/main/default/objects/PII_Mask_Log__c/PII_Mask_Log__c.object-meta.xml
<CustomObject>
    <label>PII Mask Log</label>
    <pluralLabel>PII Mask Logs</pluralLabel>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>