force-app/main/default/objects/PII_Mask_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <label>Error Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>