force-app/main/default/objects/PII_Mask_Log__c/fields/Failed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_Ids__c</fullName>
    <label>Failed Record Ids</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>