force-app/main/default/objects/PII_Mask_Log__c/fields/Fields_Masked__c.field-meta.xml
<CustomField>
    <fullName>Fields_Masked__c</fullName>
    <label>Fields Masked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>