force-app/main/default/objects/PII_Mask_Log__c/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <label>Records Failed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>